--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ a{
 }
 html,body{
     width: 100%;
+    scroll-behavior: smooth;
 }
 :root{
     --primery:#113946;
@@ -224,13 +225,37 @@ flex-direction: column;
     align-items: center;
 }
 .sticky{
-    padding: 5px 100px ;
+    padding: 5px 13px ;
     background-color: var(--primery);
     position: sticky;
     top: 0;
     color: white;
     
 }
+
+@media only screen and (max-width: 800px) {
+    nav.navbar.navbar-expand-lg.bg-tranparent.py-3 {
+    
+        padding: 5px 13px ;
+        background-color: var(--primery);
+        position: sticky;
+        top: 0;
+        color: white;
+        
+    }
+   
+}
+@media only screen and (max-width: 580px) {
+    .centerdiv {
+        height: 400px;
+        margin: 20px 0;
+        overflow: hidden;
+        width: 100%;
+        
+    }
+}
+
+  
 nav.navbar.navbar-expand-lg.bg-tranparent.py-3 {
     position: fixed;
     top: 0;
